Trying to get empty solver module working

--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -311,6 +311,19 @@ SET(FemSolverZ88_SRCS
     femsolver/z88/writer.py
 )
 
+SET(FemSolverCodeAster_SRCS
+    femsolver/codeaster/__init__.py
+    femsolver/codeaster/add_con_fixed.py
+    femsolver/codeaster/add_con_force.py
+    femsolver/codeaster/add_femelement_geometry.py
+    femsolver/codeaster/add_femelement_material.py
+    femsolver/codeaster/add_mesh.py
+    femsolver/codeaster/add_solver_control.py
+    femsolver/codeaster/solver.py
+    femsolver/codeaster/tasks.py
+    femsolver/codeaster/writer.py
+)
+
 SET(FemTests_SRCS
     femtest/__init__.py
     femtest/test_commands.sh
@@ -328,6 +341,7 @@ SET(FemTestsApp_SRCS
     femtest/app/test_object.py
     femtest/app/test_open.py
     femtest/app/test_result.py
+    femtest/app/test_solver_codeaster.py
     femtest/app/test_solver_elmer.py
     femtest/app/test_solver_mystran.py
     femtest/app/test_solver_z88.py
@@ -415,6 +429,13 @@ SET(FemTestsMystran_SRCS
     femtest/data/mystran/mystran_plate.bdf
 )
 
+SET(FemTestsCodeAster_SRCS
+    femtest/data/codeaster/__init__.py
+    femtest/data/codeaster/plate-ORD1.med
+    femtest/data/codeaster/test.export
+    femtest/data/codeaster/testplate.comm
+)
+
 SET(FemTestsOpen_SRCS
     femtest/data/open/__init__.py
     femtest/data/open/all_objects_de9b3fb438.FCStd
@@ -496,6 +517,7 @@ SET(FemAllScripts
     ${FemResult_SRCS}
     ${FemSolver_SRCS}
     ${FemSolverCalculix_SRCS}
+    ${FemSolverCodeAster_SRCS}
     ${FemSolverElmer_SRCS}
     ${FemSolverElmerEquations_SRCS}
     ${FemSolverFenics_SRCS}
@@ -505,6 +527,7 @@ SET(FemAllScripts
     ${FemTestsApp_SRCS}
     ${FemTestsFiles_SRCS}
     ${FemTestsCcx_SRCS}
+    ${FemSolverCodeAster_SRCS}
     ${FemTestsElmer_SRCS}
     ${FemTestsMesh_SRCS}
     ${FemTestsMystran_SRCS}
@@ -535,6 +558,7 @@ INSTALL(FILES ${FemObjects_SRCS} DESTINATION Mod/Fem/femobjects)
 INSTALL(FILES ${FemResult_SRCS} DESTINATION Mod/Fem/femresult)
 INSTALL(FILES ${FemSolver_SRCS} DESTINATION Mod/Fem/femsolver)
 INSTALL(FILES ${FemSolverCalculix_SRCS} DESTINATION Mod/Fem/femsolver/calculix)
+INSTALL(FILES ${FemSolverCodeAster_SRCS} DESTINATION Mod/Fem/femsolver/codeaster)
 INSTALL(FILES ${FemSolverElmer_SRCS} DESTINATION Mod/Fem/femsolver/elmer)
 INSTALL(FILES ${FemSolverElmerEquations_SRCS} DESTINATION Mod/Fem/femsolver/elmer/equations)
 INSTALL(FILES ${FemSolverFenics_SRCS} DESTINATION Mod/Fem/femsolver/fenics)
@@ -544,6 +568,7 @@ INSTALL(FILES ${FemTests_SRCS} DESTINATION Mod/Fem/femtest)
 INSTALL(FILES ${FemTestsApp_SRCS} DESTINATION Mod/Fem/femtest/app)
 INSTALL(FILES ${FemTestsFiles_SRCS} DESTINATION Mod/Fem/femtest/data)
 INSTALL(FILES ${FemTestsCcx_SRCS} DESTINATION Mod/Fem/femtest/data/calculix)
+INSTALL(FILES ${FemTestsCodeAster_SRCS} DESTINATION Mod/Fem/femtest/data/codeaster)
 INSTALL(FILES ${FemTestsElmer_SRCS} DESTINATION Mod/Fem/femtest/data/elmer)
 INSTALL(FILES ${FemTestsMesh_SRCS} DESTINATION Mod/Fem/femtest/data/mesh)
 INSTALL(FILES ${FemTestsMystran_SRCS} DESTINATION Mod/Fem/femtest/data/mystran)
