First stab at ortho material

--- a/src/Gui/PreferencePackTemplates/Shortcuts.cfg
+++ b/src/Gui/PreferencePackTemplates/Shortcuts.cfg
@@ -198,6 +198,7 @@
           <FCText Name="FEM_MaterialEditor"></FCText>
           <FCText Name="FEM_MaterialFluid"></FCText>
           <FCText Name="FEM_MaterialMechanicalNonlinear"></FCText>
+          <FCText Name="FEM_MaterialOrtho"></FCText>
           <FCText Name="FEM_MaterialReinforced"></FCText>
           <FCText Name="FEM_MaterialSolid">M, S</FCText>
           <FCText Name="FEM_MeshBoundaryLayer"></FCText>
