Terrible medcoupling segfault

--- a/src/Gui/PreferencePackTemplates/Shortcuts.cfg
+++ b/src/Gui/PreferencePackTemplates/Shortcuts.cfg
@@ -183,6 +183,7 @@
           <FCText Name="FEM_ElementFluid1D"></FCText>
           <FCText Name="FEM_ElementGeometry1D"></FCText>
           <FCText Name="FEM_ElementGeometry2D"></FCText>
+          <FCText Name="FEM_ElementGeometryLaminate"></FCText>
           <FCText Name="FEM_ElementRotation1D"></FCText>
           <FCText Name="FEM_EquationDeformation"></FCText>
           <FCText Name="FEM_EquationElasticity"></FCText>
